# toolkit

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  deploy.sh  env.example  lefthook.yml  openapi.json  pyproject.toml
.github/workflows/: build.yml
app/: main.py
app/api/: routes.py
app/core/: celery_queue.py  config.py  tasks.py
app/detection/: scene_detect.py  transcribe.py
app/models/: result_models.py
app/tests/: test_api.py  test_celery_queue.py  test_create_job_dedup.py  test_transcribe.py
detection-viewer/: index.html  package-lock.json  package.json
detection-viewer/src/: App.css  App.tsx  index.css  types.ts
detection-viewer/src/components/: BboxFrame.tsx  BboxOverlay.tsx  SpriteCrop.tsx  VideoDetectionPlayer.tsx
