[project]
name = "celluloid-toolkit"
version = "0.1.0"
description = "Celluloid Toolkit is a collection of tools for video detection and analysis, transcription, diarization and more."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "Pillow>=10.0.0",
    "fastapi==0.104.1",
    "python-dotenv>=1.0.0",
    "asgiref>=3.8.1",
    "hypercorn==0.15.0",
    "aiohttp>=3.9.1",
    "aiofiles==23.2.1",
    "scalar-fastapi==1.8.2",
    "celery[redis]>=5.3.0",
    "flower>=2.0.1",
    "redis>=5.0.1",
    "uvicorn>=0.34.3",
    "scenedetect==0.6.7.1",
    "faster-whisper>=1.1.1",
    "pyannote.audio==3.4.0",
    "huggingface-hub<1.0",
    "torch<2.13",
    "torchaudio<2.12",
    "ffmpeg-python>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "flake8>=7.0.0",
    "pytest>=8.0.0",
    "requests>=2.31.0",
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools]
py-modules = [
    "analyse",
    "run",
]
packages = ["app"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

